[package]
name = "mfm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["cargo", "derive"] }
dotenv = "0.15.0"
log = "0.4.28"
pretty_env_logger = "0.5.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
